--- a/public/css/input.css
+++ b/public/css/input.css
@@ -1,1 +1,9 @@
 @import "tailwindcss";
+
+.alert {
+    @apply fixed text-sm bottom-4 right-4 rounded-lg px-4 py-4 w-72 flex justify-start items-center bg-white;
+}
+
+.alert-success {
+    @apply border border-green-500 text-green-500 shadow shadow-green-400;
+}
