--- a/views/users/index.hbs
+++ b/views/users/index.hbs
@@ -1,11 +1,13 @@
 {{> navbar}}
 
-
-<h1 class="text-3xl font-bold underline">
-    Hello world!
-</h1>
-
-
+<div class="w-full flex justify-between items-center">
+    <p class="text-3xl font-bold">
+        Users
+    </p>
+    <a href="/users/create" class="bg-blue-500 text-white px-2 py-1 rounded">
+        Add User
+    </a>
+</div>
 <table class="table-auto border-collapse border border-gray-300 w-full mt-4">
     <thead>
     <tr class="bg-gray-200">
