--- a/public/css/input.css
+++ b/public/css/input.css
@@ -7,3 +7,7 @@
 .alert-success {
     @apply border border-green-500 text-green-500 shadow shadow-green-400;
 }
+
+.alert-error {
+    @apply border border-red-400 text-red-400 shadow shadow-red-400;
+}
