--- a/views/users/create.hbs
+++ b/views/users/create.hbs
@@ -4,24 +4,29 @@
     Form users create
 </div>
 
+{{#if errorMessage}}
+    <div id="alert" class="alert alert-error">
+        {{errorMessage}}
+    </div>
+{{/if}}
 
-<form action="/users-create" method="POST" novalidate class="bg-white shadow rounded px-8 pt-6 pb-8 mb-4 grid grid-cols-1 md:grid-cols-2 gap-2">
+<form action="/users/create" method="POST" novalidate class="bg-white shadow rounded px-8 pt-6 pb-8 mb-4 grid grid-cols-1 md:grid-cols-2 gap-2">
     <div class="mb-4">
         <label for="name" class="block text-gray-700 text-sm font-bold mb-2">Name:</label>
-        <input type="text" id="name" name="name" placeholder="Enter your name"
+        <input type="text" id="name" name="name" value="{{formData.name}}" placeholder="Enter your name"
                class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
                required>
     </div>
 
     <div class="mb-4">
         <label for="phone" class="block text-gray-700 text-sm font-bold mb-2">Phone:</label>
-        <input type="text" id="phone" name="phone" placeholder="Enter your phone number"
+        <input type="text" id="phone" name="phone" value="{{formData.phone}}" placeholder="Enter your phone number"
                class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
     </div>
 
     <div class="mb-4">
         <label for="email" class="block text-gray-700 text-sm font-bold mb-2">Email:</label>
-        <input type="email" id="email" name="email" placeholder="Enter your email"
+        <input type="email" id="email" name="email" value="{{formData.email}}" placeholder="Enter your email"
                class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
                required>
     </div>
@@ -30,8 +35,8 @@
         <label for="is_active" class="block text-gray-700 text-sm font-bold mb-2">Is Active:</label>
         <select id="is_active" name="is_active"
                 class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
-            <option value="1">Active</option>
-            <option value="0">Inactive</option>
+            <option value="1" {{#if (eq formData.is_active "1")}}selected{{/if}}>Active</option>
+            <option value="0" {{#if (eq formData.is_active "0")}}selected{{/if}}>Inactive</option>
         </select>
     </div>
 
