--- a/public/css/input.css
+++ b/public/css/input.css
@@ -11,3 +11,11 @@
 .alert-error {
     @apply border border-red-400 text-red-400 shadow shadow-red-400;
 }
+
+.btn-primary {
+    @apply bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 shadow rounded focus:outline-none focus:ring focus:ring-blue-200;
+}
+
+.btn-secondary {
+    @apply bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:ring focus:ring-gray-200;
+}
