--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,7 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../css/output.css" rel="stylesheet">
+    <link href="/css/output.css" rel="stylesheet">
+    <title>
+        {{#if title}}
+            {{title}}
+        {{else}}
+            My Node Apps
+        {{/if}}
+    </title>
+
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const alertBox = document.getElementById("alert");
