--- a/views/users/index.hbs
+++ b/views/users/index.hbs
@@ -25,7 +25,7 @@
         <td class="border border-gray-300 px-4 py-2">{{this.name}}</td>
         <td class="border border-gray-300 px-4 py-2">{{this.phone}}</td>
         <td class="border border-gray-300 px-4 py-2">
-            <button class="bg-blue-500 text-white px-2 py-1 rounded mr-2">Edit</button>
+            <button onclick="handleEdit({{this.id}})" class="bg-blue-500 text-white px-2 py-1 rounded mr-2">Edit</button>
             <button class="bg-red-500 text-white px-2 py-1 rounded">Delete</button>
         </td>
     </tr>
@@ -33,3 +33,9 @@
 
     </tbody>
 </table>
+
+<script>
+    function handleEdit(id) {
+        window.location.href = `/users/edit/${id}`;
+    }
+</script>
