update the multer upload avatar

--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -3,8 +3,7 @@
        <h1>My App</h1>
        <div class="flex justify-end items-center gap-4">
            <a href="/" class="text-blue-500">Home</a>
-           <a href="/about" class="text-blue-500">About</a>
-           <a href="/contact" class="text-blue-500">Contact</a>
+           <a href="/users" class="text-blue-500">Users</a>
        </div>
    </div>
 </div>
