--- a/views/partials/forms/user.hbs
+++ b/views/partials/forms/user.hbs
@@ -29,6 +29,19 @@
     </div>
 </div>
 
+<div class="mb-4 w-full">
+    <p>url path : {{data.avatar}}</p>
+    <label for="avatar" class="block text-gray-700 text-sm font-bold mb-2">Avatar:</label>
+    <input type="file" id="avatar" name="avatar" accept="image/*"
+           class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+    {{#if data.avatar}}
+        <div class="mt-2">
+            <img src="{{data.avatar}}" alt="Current avatar" class="h-20 w-20 object-cover rounded-full">
+        </div>
+    {{/if}}
+</div>
+
+
 <div class="flex items-center justify-end gap-2">
     <button type="button" onclick="window.location.href = '/users'"
        class="btn btn-secondary">
