--- a/views/users/create.hbs
+++ b/views/users/create.hbs
@@ -10,6 +10,6 @@
     </div>
 {{/if}}
 
-<form action="/users/create" method="POST" novalidate class="bg-white shadow rounded px-8 pt-6 pb-8 mb-4">
+<form action="/users/create" method="POST" novalidate class="bg-white shadow rounded px-8 pt-6 pb-8 mb-4" enctype="multipart/form-data">
     {{> forms/user}}
 </form>
