--- a/views/users/edit.hbs
+++ b/views/users/edit.hbs
@@ -10,7 +10,7 @@
     </div>
 {{/if}}
 
-<form action="/users/edit/{{data.id}}?_method=PUT" method="POST" novalidate class="bg-white shadow rounded px-8 pt-6 pb-8 mb-4">
+<form action="/users/edit/{{data.id}}" method="POST" novalidate class="bg-white shadow rounded px-8 pt-6 pb-8 mb-4">
     {{> forms/user}}
 </form>
 
